--- a/CrewManagement/app/src/main/AndroidManifest.xml
+++ b/CrewManagement/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Navigation"></meta-data>
         </activity>
+        <activity android:name=".Profile"
+            android:label="Profile"
+            android:parentActivityName=".Navigation">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Navigation"></meta-data>
+        </activity>
         <activity android:name=".NewsFeed"
             android:label="NewsFeed"
             android:parentActivityName=".Navigation">
