--- a/CrewManagement/app/src/main/AndroidManifest.xml
+++ b/CrewManagement/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="Google Maps"
+            android:parentActivityName=".Navigation">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".Navigation" />
         <activity android:name=".Navigation" />
         <activity android:name=".ChangePassword" />
         <activity android:name=".NewJob" />
